apps/flux-web/requirements.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${FLUX_WEB_NAMESPACE:-flux-system}
  labels:
    toolkit.fluxcd.io/tenant: sthings-team
